--- a/app/assets/javascripts/recurring_select_dialog.js.coffee.erb
+++ b/app/assets/javascripts/recurring_select_dialog.js.coffee.erb
@@ -384,8 +384,8 @@ window.RecurringSelectDialog =
 
     template: () ->
       str = "
-      <div id='myModal' class='modal hide fade' tabindex='-1' role='dialog' aria-labelledby='myModalLabel' aria-hidden='true' style='width: 300px; margin-left: -150px;'>
-        <div class='modal-dialog'>
+      <div id='myModal' class='modal fade' tabindex='-1' role='dialog' aria-labelledby='myModalLabel' aria-hidden='true'>
+        <div class='modal-dialog' style='width: 300px;'>
         <div class='modal-content'>
         <div class='modal-header'>
           <button type='button' class='close' data-dismiss='modal' aria-hidden='true' title='#{$.fn.recurring_select.texts["cancel"]}'>&times;</button>
